markdown/3.md updated from https://stackedit.cn/

--- a/markdown/3.md
+++ b/markdown/3.md
@@ -1,7 +1,7 @@
 
 测试
-
+![输入图片说明](/imgs/2023-03-27/nF12EkbNpdfl2BnU.png)
 > Written with [StackEdit中文版](https://stackedit.cn/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMzQ2OTc3MzFdfQ==
+eyJoaXN0b3J5IjpbMjAyMjE3Njc1LC0xMjM0Njk3NzMxXX0=
 -->
