markdown/1.md updated from https://stackedit.cn/

--- a/markdown/1.md
+++ b/markdown/1.md
@@ -1,6 +1,6 @@
 # Surface Go2 安装 FydeOS
 ## 前言
-suraface go2 我之前买的是
+suraface go2 我之前买的是4425y 8+128的版本。已经不知道重新刷了多少次系统了，每次都是刚刚重装完的时候很流畅，但是一把备份的一些软件安装完就变得s
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAzMjQ0NTk3XX0=
+eyJoaXN0b3J5IjpbNzYyMTg2NzE0XX0=
 -->
