--- a/markdown/1.md
+++ b/markdown/1.md
@@ -1,6 +1,6 @@
 # Surface Go2 安装 FydeOS
 ## 前言
-suraface go2 我之前买的是4425y 8+128的版本。已经不知道重新刷了多少次系统了，每次都是刚刚重装完的时候很流畅，但是一把备份的一些软件安装完就变得十分卡顿。最要命的是他会后台自动更新，这个时候不仅占网速，还会把孱弱的cpu给干费，实际体验下来8个g的内存实际上根本无法有效利用，只能说是给
+suraface go2 我之前买的是4425y 8+128的版本。已经不知道重新刷了多少次系统了，每次都是刚刚重装完的时候很流畅，但是一把备份的一些软件安装完就变得十分卡顿。最要命的是他会后台自动更新，这个时候不仅占网速，还会把孱弱的cpu给干费，实际体验下来8个g的内存实际上根本无法有效利用。只能说是给了一个能运行的最低标准，但是体验一言难尽，甚至之前把白板在线化，
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MDQwNDY3MDldfQ==
+eyJoaXN0b3J5IjpbMTAwNDMyODQ1OF19
 -->
