--- a/markdown/1.md
+++ b/markdown/1.md
@@ -1,7 +1,9 @@
 # Surface Go2 安装 FydeOS
 ## 前言
-suraface go2 我之前买的是4425y 8+128的版本。已经不知道重新刷了多少次系统了，每次都是刚刚重装完的时候很流畅，但是一把备份的一些软件安装完就变得十分卡顿。最要命的是他会后台自动更新，这个时候不仅占网速，还会把孱弱的cpu给干费，实际体验下来8个g的内存实际上根本无法有效利用。只能说是给了一个能运行的最低标准，但是体验一言难尽，甚至之前把白板在线化，把一个神级应用变成废物，导致手写只能使用onenote。
-总结一下就是2020年出的这台微软亲儿子设备已经无法流畅的运行windows系统了，所以我就把目光移向了linux系统，搜索了一下刚好搜到了chrome os继而搜索到FydeOS，体验了一下，真的很不错。流畅
+	suraface go2 我之前买的是4425y 8+128的版本。已经不知道重新刷了多少次系统了，每次都是刚刚重装完的时候很流畅，但是一把备份的一些软件安装完就变得十分卡顿。最要命的是他会后台自动更新，这个时候不仅占网速，还会把孱弱的cpu给干费，实际体验下来8个g的内存实际上根本无法有效利用。只能说是给了一个能运行的最低标准，但是体验一言难尽，甚至之前把白板在线化，把一个神级应用变成废物，导致手写只能使用onenote。
+	总结一下就是2020年出的这台微软亲儿子设备已经无法流畅的运行windows系统了，所以我就把目光移向了linux系统，搜索了一下刚好搜到了chrome os继而搜索到FydeOS，体验了一下，真的很不错。流畅，省电，手写延迟甚至感觉比windows还低，遂详细介绍如何安装并使用FydeOS
+## 什么是FydeOS
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjEwMzkzNDY4M119
+eyJoaXN0b3J5IjpbOTcxMzg4NzY5XX0=
 -->
