markdown/1.md updated from https://stackedit.cn/

--- a/markdown/1.md
+++ b/markdown/1.md
@@ -4,6 +4,9 @@
 	总结一下就是2020年出的这台微软亲儿子设备已经无法流畅的运行windows系统了，所以我就把目光移向了linux系统，搜索了一下刚好搜到了chrome os继而搜索到FydeOS，体验了一下，真的很不错。流畅，省电，手写延迟甚至感觉比windows还低，遂详细介绍如何安装并使用FydeOS
 ## 什么是FydeOS
 首先在安装之前需要知道FydeOS是什么
+FydeOS是一款携带Linux内核+浏览器平台+容器技术驱动的轻量级操作系统，使用和Google Chrome OS十分类似。它是由燧炻科技创新（北京）有限责任公司基于开源项目Chromium Project二次开发，适配x86与ARM硬件平台，定位于中国版的Google Chrome OS。
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY3MDUyNzMyM119
+eyJoaXN0b3J5IjpbMTczODc5MzA1MF19
 -->
