markdown/1.md updated from https://stackedit.cn/

--- a/markdown/1.md
+++ b/markdown/1.md
@@ -5,8 +5,9 @@
 ## 什么是FydeOS
 首先在安装之前需要知道FydeOS是什么
 FydeOS是一款携带Linux内核+浏览器平台+容器技术驱动的轻量级操作系统，使用和Google Chrome OS十分类似。它是由燧炻科技创新（北京）有限责任公司基于开源项目Chromium Project二次开发，适配x86与ARM硬件平台，定位于中国版的Google Chrome OS。
-它的底层是linux,并且只包含一个浏览器，这意味着网络是使用这个系统的重要前提。而它也不仅是一个浏览器，通过安装安卓子系统和linux子系统，几乎可以安装除了windows的所有应用，当然是x86的安卓和linux.
+
+它的底层是linux,并且只包含一个浏览器，这意味着网络是使用这个系统的重要前提。而它也不仅是一个浏览器，通过安装安卓子系统和linux子系统，几乎可以安装除了windows的所有应用，当然是x86的安卓和linux。x86的安卓原生应用少但是足够，linux就比较丰富了，之后会详细介绍。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAyMTkxNTM3M119
+eyJoaXN0b3J5IjpbLTQxNjU5ODE0Ml19
 -->
