markdown/1.md updated from https://stackedit.cn/

--- a/markdown/1.md
+++ b/markdown/1.md
@@ -15,8 +15,11 @@ https://fydeos.com/download/device/surface-go2
 刷写工具下载，可以只下载便携版本不用安装
 https://www.balena.io/etcher
 制作启动盘
-
+图片待补充
+Surface设置
+关机长按音量加然后进入UEFI界面（surface的bios）
+将USB启动设置为首选，然后关闭
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgzNTk5NjkwNywtMTA2NDU3NTE1Ml19
+eyJoaXN0b3J5IjpbMzQzMTEzNDkzLC0xMDY0NTc1MTUyXX0=
 -->
