--- a/markdown/1.md
+++ b/markdown/1.md
@@ -18,8 +18,11 @@ https://www.balena.io/etcher
 图片待补充
 Surface设置
 关机长按音量加然后进入UEFI界面（surface的bios）
-将USB启动设置为首选，然后关闭
+将USB启动设置为首选，然后关闭安全启动
+## 安装系统
+完成安装准备后插上U盘然后应该就会直接进入FydeOS安装界面，如果没有可能是U盘的问题，也可以从windows进入gao
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzQzMTEzNDkzLC0xMDY0NTc1MTUyXX0=
+eyJoaXN0b3J5IjpbLTE5MDUzNjI1NTEsLTEwNjQ1NzUxNTJdfQ
+==
 -->
