markdown/1.md updated from https://stackedit.cn/

--- a/markdown/1.md
+++ b/markdown/1.md
@@ -20,9 +20,10 @@ Surface设置
 关机长按音量加然后进入UEFI界面（surface的bios）
 将USB启动设置为首选，然后关闭安全启动
 ## 安装系统
-完成安装准备后插上U盘然后应该就会直接进入FydeOS安装界面，如果没有可能是U盘的问题，也可以从windows进入gao
+完成安装准备后插上U盘然后应该就会直接进入FydeOS安装界面，如果没有可能是U盘的问题，也可以从windows进入高级启动-从U盘启动
+安装界面先选择安装过程中所展示的语言，你可以选择试用也可以选择直接安装。
+我这里选择
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MDUzNjI1NTEsLTEwNjQ1NzUxNTJdfQ
-==
+eyJoaXN0b3J5IjpbLTUzNjM5OTU5LC0xMDY0NTc1MTUyXX0=
 -->
