markdown/1.md updated from https://stackedit.cn/

--- a/markdown/1.md
+++ b/markdown/1.md
@@ -23,8 +23,9 @@ Surface设置
 ## 安装系统
 完成安装准备后插上U盘然后应该就会直接进入FydeOS安装界面，如果没有可能是U盘的问题，也可以从windows进入高级启动-从U盘启动
 安装界面先选择安装过程中所展示的语言，你可以选择试用也可以选择直接安装。
-我这里选择全盘安装，全盘an a
+安装方式有两种一种全盘安装一种多系统安装
+我这里选择全盘安装
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQxNzg0NjczMywtMTA2NDU3NTE1Ml19
+eyJoaXN0b3J5IjpbMTI5MDI0Njk3LC0xMDY0NTc1MTUyXX0=
 -->
