markdown/1.md updated from https://stackedit.cn/

--- a/markdown/1.md
+++ b/markdown/1.md
@@ -24,9 +24,9 @@ Surface设置
 完成安装准备后插上U盘然后应该就会直接进入FydeOS安装界面，如果没有可能是U盘的问题，也可以从windows进入高级启动-从U盘启动
 安装界面先选择安装过程中所展示的语言，你可以选择试用也可以选择直接安装。
 安装方式有两种一种全盘安装，一种多系统安装
-全盘安装的好处是只有一个系统，开机直接
+全盘安装的好处是只有一个系统，开机直接就进去了，不用选择，也不用等待grub界面，是纯粹的安装方式，缺点呢在于fydeos
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMjUwNjM0NTcsMTI5MDI0Njk3LC0xMD
-Y0NTc1MTUyXX0=
+eyJoaXN0b3J5IjpbLTE5MDM5NjE0OSwxMjkwMjQ2OTcsLTEwNj
+Q1NzUxNTJdfQ==
 -->
