markdown/1.md updated from https://stackedit.cn/

--- a/markdown/1.md
+++ b/markdown/1.md
@@ -25,9 +25,10 @@ Surface设置
 安装界面先选择安装过程中所展示的语言，你可以选择试用也可以选择直接安装。
 安装方式有两种一种全盘安装，一种多系统安装
 全盘安装的好处是只有一个系统，开机直接就进去了，不用选择，也不用等待grub界面，是纯粹的安装方式，缺点呢在于遇到fydeos出问题了，那就只能看着它发呆。
-多系统安装可以让windowsxi t
+多系统安装可以让windows系统备用，有时候难免会遇到急需windows的时候。不过安装会稍微麻烦，使用也稍微麻烦，需要自己权衡利弊。
+全盘安装很简单，选择硬盘然后点击安装就可以了
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgxOTQ2ODA0OSwxMjkwMjQ2OTcsLTEwNj
-Q1NzUxNTJdfQ==
+eyJoaXN0b3J5IjpbLTE2OTE4NDAxNzksMTI5MDI0Njk3LC0xMD
+Y0NTc1MTUyXX0=
 -->
