--- a/markdown/1.md
+++ b/markdown/1.md
@@ -27,9 +27,14 @@ Surface设置
 全盘安装的好处是只有一个系统，开机直接就进去了，不用选择，也不用等待grub界面，是纯粹的安装方式，缺点呢在于遇到fydeos出问题了，那就只能看着它发呆。
 多系统安装可以让windows系统备用，有时候难免会遇到急需windows的时候。不过安装会稍微麻烦，使用也稍微麻烦，需要自己权衡利弊。
 全盘安装很简单，选择硬盘然后点击安装就可以了，注意如果你插入了tf卡，默认的选择是tf卡，你需要手动改为带有nvme的这个硬盘。
-等个10多分钟安装完毕，关机拔U盘然后开机就进入
+等个10多分钟安装完毕，关机拔U盘然后开机就进入FydeOS系统了。
+多系统安装你需要选择
+
+
+## 优雅的使用FydeOS
+建议使用FydeOS登陆，可以tong
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI5MzUwMzc0MCwxMjkwMjQ2OTcsLTEwNj
-Q1NzUxNTJdfQ==
+eyJoaXN0b3J5IjpbLTEzMDkxNjM1NjksMTI5MDI0Njk3LC0xMD
+Y0NTc1MTUyXX0=
 -->
