markdown/1.md updated from https://stackedit.cn/

--- a/markdown/1.md
+++ b/markdown/1.md
@@ -32,9 +32,12 @@ Surface设置
 
 
 ## 优雅的使用FydeOS
-建议使用FydeOS登陆，可以tong
+建议使用FydeOS登陆，可以同步信息，之后重装方便很多。
+
+### 安装安卓子系统
+上网工具v2rayn
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMDkxNjM1NjksMTI5MDI0Njk3LC0xMD
-Y0NTc1MTUyXX0=
+eyJoaXN0b3J5IjpbMTQzODk2OTk1MSwxMjkwMjQ2OTcsLTEwNj
+Q1NzUxNTJdfQ==
 -->
