markdown/3.md updated from https://stackedit.cn/

--- a/markdown/3.md
+++ b/markdown/3.md
@@ -1,17 +1,44 @@
 
-测试一下
-![输入图片说明](/imgs/2023-03-27/nF12EkbNpdfl2BnU.png)
-> Written with [StackEdit中文版](https://stackedit.cn/).
+# Surface Go2 安装 FydeOS
+## 前言
+	suraface go2 我之前买的是4425y 8+128的版本。已经不知道重新刷了多少次系统了，每次都是刚刚重装完的时候很流畅，但是一把备份的一些软件安装完就变得十分卡顿。最要命的是他会后台自动更新，这个时候不仅占网速，还会把孱弱的cpu给干费，实际体验下来8个g的内存实际上根本无法有效利用。只能说是给了一个能运行的最低标准，但是体验一言难尽，甚至之前把白板在线化，把一个神级应用变成废物，导致手写只能使用onenote。
+	总结一下就是2020年出的这台微软亲儿子设备已经无法流畅的运行windows系统了，所以我就把目光移向了linux系统，搜索了一下刚好搜到了chrome os继而搜索到FydeOS，体验了一下，真的很不错。流畅，省电，手写延迟甚至感觉比windows还低，遂详细介绍如何安装并使用FydeOS
+## 什么是FydeOS
+首先在安装之前需要知道FydeOS是什么
+FydeOS是一款携带Linux内核+浏览器平台+容器技术驱动的轻量级操作系统，使用和Google Chrome OS十分类似。它是由燧炻科技创新（北京）有限责任公司基于开源项目Chromium Project二次开发，适配x86与ARM硬件平台，定位于中国版的Google Chrome OS。
 
- 1. 这里是列表文本
- 2. 这里是列表文本
-000000
-|  |  |
-|--|--|
-|  |  |
+它的底层是linux,并且只包含一个浏览器，这意味着网络是使用这个系统的重要前提，并且由于基于chrome os,完整的网络环境下才能解锁全部的内容。而它也不仅是一个浏览器，通过安装安卓子系统和linux子系统，几乎可以安装除了windows的所有应用，当然是x86的安卓和linux。x86的安卓原生应用少但是足够，linux就比较丰富了，之后会详细介绍。
+## 安装准备
+安装前提：默认是在windows系统下安装
+硬件准备：一个至少16G的U盘最好是TypeC口的，也可以可以PDD买一个AtoC的转换器几块钱
+首先从官网下载镜像
+for you系列是专门做过优化的版本，这里下载对go2对应的版本
+https://fydeos.com/download/device/surface-go2
+刷写工具下载，可以只下载便携版本不用安装
+https://www.balena.io/etcher
+制作启动盘
+图片待补充
+Surface设置
+关机长按音量加然后进入UEFI界面（surface的bios）
+将USB启动设置为首选，然后关闭安全启动
+## 安装系统
+完成安装准备后插上U盘然后应该就会直接进入FydeOS安装界面，如果没有可能是U盘的问题，也可以从windows进入高级启动-从U盘启动
+安装界面先选择安装过程中所展示的语言，你可以选择试用也可以选择直接安装。
+安装方式有两种一种全盘安装，一种多系统安装
+全盘安装的好处是只有一个系统，开机直接就进去了，不用选择，也不用等待grub界面，是纯粹的安装方式，缺点呢在于遇到fydeos出问题了，那就只能看着它发呆。
+多系统安装可以让windows系统备用，有时候难免会遇到急需windows的时候。不过安装会稍微麻烦，使用也稍微麻烦，需要自己权衡利弊。
+全盘安装很简单，选择硬盘然后点击安装就可以了，注意如果你插入了tf卡，默认的选择是tf卡，你需要手动改为带有nvme的这个硬盘。
+等个10多分钟安装完毕，关机拔U盘然后开机就进入FydeOS系统了。
+多系统安装你需要选择
 
+
+## 优雅的使用FydeOS
+建议使用FydeOS登陆，可以同步信息，之后重装方便很多。
+
+### 安装安卓子系统
+上网工具v2rayn
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMDYyMzI4MTMsMjAyMjE3Njc1LC0xMj
-M0Njk3NzMxXX0=
+eyJoaXN0b3J5IjpbODUyNTQ1MTMsLTIxMDYyMzI4MTMsMjAyMj
+E3Njc1LC0xMjM0Njk3NzMxXX0=
 -->
